// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Themes data tests should return global picture themes 1`] = `
"Array [
  Object {
    \\"default_indicator\\": \\"data_series.poor_people_190\\",
    \\"id\\": \\"poverty\\",
    \\"indicators\\": Array [
      Object {
        \\"heading\\": \\"Extreme poverty is defined as living on less than $1.90 a day. It is calculated using the national poverty lines of some of the world's poorest countries at 2011 PPP$.\\",
        \\"id\\": \\"data_series.poor_people_190\\",
        \\"name\\": \\"Number of people living in extreme poverty\\",
        \\"source\\": \\"Development Initiatives based on World Bank PovcalNet\\",
        \\"tooltip\\": \\"Number of poor people living on under 2011 PPP$ 1.90 per day.\\",
      },
      Object {
        \\"heading\\": \\"Extreme poverty is defined as living on less than $1.90 a day. It is calculated using the national poverty lines of some of the world's poorest countries at 2011 PPP$.\\",
        \\"id\\": \\"data_series.poverty_190\\",
        \\"name\\": \\"% of population living in extreme poverty\\",
        \\"source\\": \\"Development Initiatives based on World Bank PovcalNet\\",
        \\"tooltip\\": \\"Percentage of population living under 2011 PPP$ 1.90 per day.\\",
      },
      Object {
        \\"heading\\": \\"From World Bank PovCalNet, representing the average gap for the whole population of each country, with those above the extreme poverty line counted as having a zero gap.\\",
        \\"id\\": \\"data_series.depth_of_extreme_poverty_190\\",
        \\"name\\": \\"Depth of extreme poverty (poverty gap)\\",
        \\"source\\": \\"Development Initiatives based on World Bank PovcalNet\\",
        \\"tooltip\\": \\"Depth of extreme poverty (also known as the poverty gap) tells us how far people are from the extreme poverty line, on average per country.\\",
      },
      Object {
        \\"heading\\": \\"Data for those living under $3.10 a day illustrates that while many people are not in extreme poverty (less than $1.90 a day) they are still very poor.\\",
        \\"id\\": \\"data_series.poverty_310\\",
        \\"name\\": \\"% of population living on less than $3.10 a day\\",
        \\"source\\": \\"Development Initiatives based on World Bank PovcalNet\\",
        \\"tooltip\\": \\"Percentage of population living under 2011 PPP$ 3.10 per day.\\",
      },
      Object {
        \\"heading\\": \\"The approximate number of people in each country who are in the global poorest 20%\\",
        \\"id\\": \\"data_series.poorest_20_percent\\",
        \\"name\\": \\"Number of people in the P20\\",
        \\"source\\": \\"Development Initiatives based on PovcalNet as well as selected Demographic and health Surveys (DHS), Multiple Indicator Cluster Surveys (MICS), China Family Panel Studies (CFPS), and Brazil National Demographic and Healtj Surveys (PNDS)\\",
        \\"tooltip\\": \\"The approximate number of people in each country who are in the global poorest 20%\\",
      },
      Object {
        \\"heading\\": \\"The percentage of population of each country who are in the global poorest 20%\\",
        \\"id\\": \\"data_series.percent_in_p20_national\\",
        \\"name\\": \\"% of people in the P20\\",
        \\"source\\": \\"Development Initiatives based on PovcalNet as well as selected Demographic and health Surveys (DHS), Multiple Indicator Cluster Surveys (MICS), China Family Panel Studies (CFPS), and Brazil National Demographic and Healtj Surveys (PNDS)\\",
        \\"tooltip\\": \\"The percentage of population of each country who are in the global poorest 20%\\",
      },
      Object {
        \\"heading\\": \\"The percentage of people in each subnational area who are in the global poorest 20%\\",
        \\"id\\": \\"subnational_p20\\",
        \\"name\\": \\"% of people in the P20 (subnational level)\\",
        \\"source\\": \\"Development Initiatives based on PovcalNet as well as selected Demographic and health Surveys (DHS), Multiple Indicator Cluster Surveys (MICS), China Family Panel Studies (CFPS), and Brazil National Demographic and Healtj Surveys (PNDS)\\",
        \\"tooltip\\": \\"The percentage of people in each subnational area who are in the global poorest 20%\\",
      },
      Object {
        \\"heading\\": \\"The percentage of people in each household survey region who are in the global poorest 20%\\",
        \\"id\\": \\"survey_p20\\",
        \\"name\\": \\"% of people in the P20 (survey level)\\",
        \\"source\\": \\"Development Initiatives based on PovcalNet as well as selected Demographic and health Surveys (DHS), Multiple Indicator Cluster Surveys (MICS), China Family Panel Studies (CFPS), and Brazil National Demographic and Healtj Surveys (PNDS)\\",
        \\"tooltip\\": \\"The percentage of people in each household survey region who are in the global poorest 20%\\",
      },
    ],
    \\"name\\": \\"Poverty\\",
    \\"position\\": 1,
  },
  Object {
    \\"default_indicator\\": \\"data_series.fragile_states\\",
    \\"id\\": \\"vulnerability\\",
    \\"indicators\\": Array [
      Object {
        \\"heading\\": \\"The OECD Fragiliy Framework identifies countries are fragile or extremely fragile based on 50 indicators across five dimensions (economic, environmental, political, security and societal). It is part of the OECD report 'States of Fragility'.\\",
        \\"id\\": \\"data_series.fragile_states\\",
        \\"name\\": \\"Fragile states\\",
        \\"source\\": \\"Development Initiatives based on Fund for Peace Fragile States Index.\\",
        \\"tooltip\\": \\"Fragile states categories.\\",
      },
      Object {
        \\"heading\\": \\"Global adaptation index score of each country's vulnerability to climate change, incorporating exposure, sensitivity and ability to adapt to the negative impacts of climate. Source: Notre Dame Global Adaptation Index (ND-GAIN) vulnerability score.\\",
        \\"id\\": \\"data_series.climate_vulnerability\\",
        \\"name\\": \\"Climate vulnerability\\",
        \\"source\\": \\"Notre Dame Global Adaptation Index (ND-GAIN) vulnerability score.\\",
        \\"tooltip\\": \\"Global adaptation index score of each country's vulnerability to climate change, incorporating exposure, sensitivity and ability to adapt to the negative impacts of climate change. Higher scores indicate higher vulnerability to climate change.\\",
      },
      Object {
        \\"heading\\": \\"Countries that are at risk of conflict or have high current conflict intensity (Inform index component).\\",
        \\"id\\": \\"data_series.human_hazard\\",
        \\"name\\": \\"Human hazard and exposure score\\",
        \\"source\\": \\"Inform (Index for Risk Management) v 3.0.5.\\",
        \\"tooltip\\": \\"Index for risk management score for exposure to human hazards (10 = high exposure).\\",
      },
      Object {
        \\"heading\\": \\"Countries that are exposed to, or are vulnerable to natural hazards (INFORM index component).\\",
        \\"id\\": \\"data_series.natural_hazard\\",
        \\"name\\": \\"Natural hazard and exposure score\\",
        \\"source\\": \\"Inform (Index for Risk Management) v 3.0.5.\\",
        \\"tooltip\\": \\"Index for risk management score for exposure to natural hazards (10 = high exposure).\\",
      },
      Object {
        \\"heading\\": \\"Number of UN-coordinated appeals per country since 2000\\",
        \\"id\\": \\"data_series.number_of_un_appeals\\",
        \\"name\\": \\"Number of UN-coordinated appeals\\",
        \\"source\\": \\"Development Initiatives based on UN OCHA's FTS.\\",
        \\"tooltip\\": \\"Number of UN-coordinated appeals per country since 2000.\\",
      },
      Object {
        \\"heading\\": \\"EC's department of Humanitarian Aid and Civil Protection (ECHO) identifies forgotten or so-called 'neglected' emergencies. It has been assembling data for its index since 2004. The map shows countries' number of appearances on the index since then.\\",
        \\"id\\": \\"data_series.forgotten_crisis\\",
        \\"name\\": \\"Number of appearances on ECHO's Forgotten Crisis Assessment index\\",
        \\"source\\": \\"Development Initiatives based on ECHO Forgotten Crisis Assessment Index.\\",
        \\"tooltip\\": \\"EC's department of Humanitarian Aid and Civil Protection (ECHO) identifies forgotten or so-called 'neglected' emergencies. It has been assembling data for its index since 2004.\\",
      },
      Object {
        \\"heading\\": \\"Number of people displaced due to human hazards refers to refugees and people in refugee-like situations, internally displaced persons and asylum seekers\\",
        \\"id\\": \\"data_series.displacement\\",
        \\"name\\": \\"Number of people displaced due to human hazards by hosting country\\",
        \\"source\\": \\"Development Initiatives based on UN High Commissioner for Refugees (UNHCR) and UN Relief and Works Agency for Palestine Refugees in the Near East.\\",
        \\"tooltip\\": \\"Number of people displaced due to human hazards refers to refugees and people in refugee-like situations, internally displaced persons and asylum seekers.\\",
      },
    ],
    \\"name\\": \\"Vulnerability\\",
    \\"position\\": 2,
  },
  Object {
    \\"default_indicator\\": \\"data_series.non_grant_revenue_ppp_pc\\",
    \\"id\\": \\"government-finance\\",
    \\"indicators\\": Array [
      Object {
        \\"heading\\": \\"Average revenue raised per person by the government, including tax and non-tax revenue (grants and borrowing are excluded). Figures are displayed in 2015 constant purchasing power parity (PPP)$. (Data series is from 1999-2021, where available. The hover function details whether the data point is an actual or a projected figure.)\\",
        \\"id\\": \\"data_series.non_grant_revenue_ppp_pc\\",
        \\"name\\": \\"Government revenue per person (excluding grants), 2015 PPP$\\",
        \\"source\\": \\"Development Initiatives based on IMF Article IV publications and World Economic Outlook.\\",
        \\"tooltip\\": \\"Government revenue per person (excluding grants), 2015 PPP$.\\",
      },
      Object {
        \\"heading\\": \\"Average revenue raised per person by the government, including tax, non-tax revenue and grants (borrowing is excluded). Figures are displayed in 2015 constant purchasing power parity (PPP)$. (Data series is from 1999-2021, where available. The hover function details whether the data point is an actual or a projected figure.)\\",
        \\"id\\": \\"data_series.total_revenue_ppp_pc\\",
        \\"name\\": \\"Government revenue per person (including grants), 2015 PPP$\\",
        \\"source\\": \\"Development Initiatives based on IMF Article IV publications and World Economic Outlook.\\",
        \\"tooltip\\": \\"Government revenue per person (including grants), 2015 PPP$.\\",
      },
      Object {
        \\"heading\\": \\"Revenue raised as a proportion of national income (GDP) by the government, including tax and non-tax revenue (grants and borrowing are excluded). (Data series is from 1999-2021, where available. The hover function details whether the data point is an actual or a projected figure.)\\",
        \\"id\\": \\"data_series.govt_revenue_pc_gdp\\",
        \\"name\\": \\"Government revenue (excluding grants), % of GDP\\",
        \\"source\\": \\"Development Initiatives based on IMF Article IV publications and World Economic Outlook.\\",
        \\"tooltip\\": \\"Government revenue (excluding grants), % of GDP\\",
      },
      Object {
        \\"heading\\": \\"Revenue raised as a proportion of national income (GDP) by the government, including tax, non-tax revenue and grants (borrowing is excluded). (Data series is from 1999-2021, where available. The hover function details whether the data point is an actual or a projected figure.)\\",
        \\"id\\": \\"data_series.total_revenue_percent_gdp\\",
        \\"name\\": \\"Government revenue (including grants), % of GDP\\",
        \\"source\\": \\"Development Initiatives based on IMF Article IV publications.\\",
        \\"tooltip\\": \\"Government revenue (including grants), % of GDP.\\",
      },
      Object {
        \\"heading\\": \\"Grants from international donors as a proportion of government revenue (including grants). (Data series is from 1999-2021, where available. The hover function details whether the data point is an actual or a projected figure.)\\",
        \\"id\\": \\"data_series.grants_percent_total_revenue\\",
        \\"name\\": \\"Grants, % of government revenue\\",
        \\"source\\": \\"Development Initiatives based on IMF Article IV publications and World Economic Outlook.\\",
        \\"tooltip\\": \\"Grants, % of government revenue.\\",
      },
      Object {
        \\"heading\\": \\"Total expenditure by the government divided by the total population. Figures are displayed in 2015 constant purchasing power parity (PPP)$. (Data series is from 1999-2021, where available. The hover function details whether the data point is an actual or a projected figure.)\\",
        \\"id\\": \\"data_series.govt_spend_pc\\",
        \\"name\\": \\"Government spending per person, 2015 PPP$\\",
        \\"source\\": \\"Development Initiatives based on IMF Article IV publications and World Economic Outlook.\\",
        \\"tooltip\\": \\"Government spending per person, 2015 PPP$. Data is for 2015 or most recent year prior.\\",
      },
    ],
    \\"name\\": \\"Government finance\\",
    \\"position\\": 3,
  },
  Object {
    \\"default_indicator\\": \\"data_series.largest_intl_flow\\",
    \\"id\\": \\"international-finance\\",
    \\"indicators\\": Array [
      Object {
        \\"heading\\": \\"Largest source of international financing to each developing country\\",
        \\"id\\": \\"data_series.largest_intl_flow\\",
        \\"name\\": \\"Largest international resource flow\\",
        \\"source\\": \\"Development Initiatives based on numerous sources (see notes for international resource flows to and from developing countries data).\\",
        \\"tooltip\\": \\"The largest international resource flow to each country in each year.\\",
      },
      Object {
        \\"heading\\": \\"The sum of official, commercial and private resource flows received by each developing country, expressed as a percentage of GDP.\\",
        \\"id\\": \\"data_series.intl_resources_total_percent_gdp\\",
        \\"name\\": \\"Total international resource flows, % of GDP\\",
        \\"source\\": \\"Development Initiatives based on numerous sources (see notes for international resource flows to and from developing countries data).\\",
        \\"tooltip\\": \\"Total international resource flows received by each country divided by the country's GDP, for each year.\\",
      },
      Object {
        \\"heading\\": \\"ODA received by each developing country, expressed as a percentage of all official, commercial and private international resource inflows.\\",
        \\"id\\": \\"data_series.oda_percent_intl_resources\\",
        \\"name\\": \\"ODA, % of international resource flows\\",
        \\"source\\": \\"Development Initiatives based on numerous sources (see notes for international resource flows to and from developing countries data).\\",
        \\"tooltip\\": \\"Inflows of gross official development assistance (ODA) to each country expressed as a percentage of total international resource flows received by the same country, each year.\\",
      },
      Object {
        \\"heading\\": \\"Inflows of foreign direct investment expressed as a percentage of the country's GDP.\\",
        \\"id\\": \\"data_series.fdi_percent_gdp\\",
        \\"name\\": \\"Foreign direct investment, % of GDP\\",
        \\"source\\": \\"Development Initiatives based on UNCTAD Stat and World Bank Development Indicators.\\",
        \\"tooltip\\": \\"Inflows of foreign direct investment to each country expressed as a percentage of GDP of the same country, each year.\\",
      },
      Object {
        \\"heading\\": \\"Volume of financing received from foreign direct investors divided by the country's population (includes equity, loans and reinvested profits). Data is in constant 2015 prices.\\",
        \\"id\\": \\"data_series.fdi_pp\\",
        \\"name\\": \\"Foreign direct investment per person, US$\\",
        \\"source\\": \\"Development Initiatives based on UNCTAD Stat and World Bank Development Indicators.\\",
        \\"tooltip\\": \\"Foreign direct investment per person (note that negative values, which occur when disinvestment exceeds new investments, are excluded).\\",
      },
      Object {
        \\"heading\\": \\"Volume of remittances received in each country divided by the country's population (includes personal transfers and income of workers employed in an economy where they are not resident). Data is in constant 2015 prices.\\",
        \\"id\\": \\"data_series.remittances_pp\\",
        \\"name\\": \\"Remittances received per person, US$\\",
        \\"source\\": \\"Development Initiatives based on World Bank.\\",
        \\"tooltip\\": \\"Remittances per person.\\",
      },
    ],
    \\"name\\": \\"International finance\\",
    \\"position\\": 4,
  },
  Object {
    \\"default_indicator\\": \\"fact.in_oda_gross_2015\\",
    \\"id\\": \\"international-official-finance\\",
    \\"indicators\\": Array [
      Object {
        \\"heading\\": \\"Gross official development assistance (ODA) includes non-monetary transfers (e.g. food aid, technical cooperation) and ODA that resulted in no additional transfer of resources (e.g. debt relief). Data is in constant 2015 prices.\\",
        \\"id\\": \\"fact.in_oda_gross_2015\\",
        \\"name\\": \\"Gross ODA received, US$\\",
        \\"source\\": \\"Development Initiatives based on OECD DAC\\",
        \\"tooltip\\": \\"Gross ODA received, US$.\\",
      },
      Object {
        \\"heading\\": \\"Net official development assistance (ODA) includes non-monetary transfers (e.g. food aid, technical cooperation) and ODA that resulted in no additional transfer of resources (e.g. debt relief) minus capital repayments on ODA loans (interest repayments are not subtracted). Data is in constant 2015 prices.\\",
        \\"id\\": \\"fact.in_oda_net_2015\\",
        \\"name\\": \\"Net ODA received, US$\\",
        \\"source\\": \\"Development Initiatives based on OECD DAC\\",
        \\"tooltip\\": \\"Net ODA received, US$.\\",
      },
      Object {
        \\"heading\\": \\"Net official development assistance (ODA) provided by each member of the OECD Development Assistance Committee (DAC). Includes non-monetary transfers (e.g. food aid, technical cooperation) and ODA that resulted in no additional transfer of resources (e.g. debt relief) minus capital repayments on ODA loans (interest repayments are not subtracted). Data is in constant 2015 prices.\\",
        \\"id\\": \\"fact.out_oda_net_2015\\",
        \\"name\\": \\"Net ODA provided by OECD DAC members, US$\\",
        \\"source\\": \\"Development Initiatives based on OECD DAC.\\",
        \\"tooltip\\": \\"Net ODA provided by OECD DAC members, US$.\\",
      },
      Object {
        \\"heading\\": \\"Official development assistance (ODA) per poor person, calculated as the total net ODA received by a country divided by the number of people in that country living on less than $1.90 per day. Data is in constant 2015 prices.\\",
        \\"id\\": \\"recipient_profile.oda_per_poor_person_2015\\",
        \\"name\\": \\"ODA per person living on under $1.90 a day, US$\\",
        \\"source\\": \\"Development Initiatives based on OECD DAC and World Bank PovcalNet.\\",
        \\"tooltip\\": \\"ODA per person living on under $1.90 a day, US$.\\",
      },
      Object {
        \\"heading\\": \\"Net official development assistance (ODA) provided by members of the OECD Development Assistance Committee (DAC), expressed as a percentage of gross national income (GNI).\\",
        \\"id\\": \\"fact.oda_percent_gni\\",
        \\"name\\": \\"Net ODA provided by DAC members, % of GNI\\",
        \\"source\\": \\"OECD DAC\\",
        \\"tooltip\\": \\"Net ODA provided by DAC members, % of GNI.\\",
      },
      Object {
        \\"heading\\": \\"Net official development assistance (ODA) to least-developed countries (LDCs) provided by members of the OECD Development Assistance Committee (DAC), expressed as a percentage of gross national income.\\",
        \\"id\\": \\"fact.oda_to_ldcs_percent_gni\\",
        \\"name\\": \\"Gross ODA provided by DAC members to LDCs, % of GNI\\",
        \\"source\\": \\"OECD DAC\\",
        \\"tooltip\\": \\"Gross ODA provided by DAC members to LDCs, % of GNI.\\",
      },
      Object {
        \\"heading\\": \\"Other official flows (OOF) are flows to developing countries from donor governments, development finance institutions (DFIs) and multilateral bodies that do not meet the criteria to count as ODA. These are typically loans at low levels of concessionality or finance that is primarily aimed at facilitating exports from the donor country. Data is in constant 2015 prices.\\",
        \\"id\\": \\"data_series.in_oof_gross\\",
        \\"name\\": \\"Gross other official flows received, US$\\",
        \\"source\\": \\"Development Initiatives based on OECD DAC.\\",
        \\"tooltip\\": \\"Gross other official flows received, US$.\\",
      },
      Object {
        \\"heading\\": \\"Other official flows (OOF) are flows to developing countries from donor governments, development finance institutions (DFIs) and multilateral bodies that do not meet the criteria to count as ODA. These are typically loans at low levels of concessionality or finance that is primarily aimed at facilitating exports from the donor country. Net OOFs are equal to gross OOFs minus capital repayments on OOF loans. Data is in constant 2015 prices.\\",
        \\"id\\": \\"data_series.out_oof_net\\",
        \\"name\\": \\"Net other official flows provided, US$\\",
        \\"source\\": \\"Development Initiatives based on OECD DAC.\\",
        \\"tooltip\\": \\"Net other official flows provided, US$.\\",
      },
      Object {
        \\"heading\\": \\"Net south-south development cooperation provided by countries that are not members of the OECD Development Assistance Committee (DAC). Data is in constant 2015 prices.\\",
        \\"id\\": \\"data_series.out_ssc_net\\",
        \\"name\\": \\"Net south-south development cooperation provided, US$\\",
        \\"source\\": \\"Development Initiatives based on OECD DAC and national sources.\\",
        \\"tooltip\\": \\"Net south-south development cooperation provided, US$.\\",
      },
      Object {
        \\"heading\\": \\"Development cooperation provided by countries that are not members of the OECD Development Assistance Committee (DAC), expressed as a percentage of gross national income.\\",
        \\"id\\": \\"data_series.ssc_percent_gni\\",
        \\"name\\": \\"South-south development cooperation provided, % of GNI\\",
        \\"source\\": \\"Development Initiatives based on OECD DAC and national sources.\\",
        \\"tooltip\\": \\"South-south development cooperation provided, % of GNI.\\",
      },
    ],
    \\"name\\": \\"International official finance\\",
    \\"position\\": 5,
  },
  Object {
    \\"default_indicator\\": \\"data_series.in_ha\\",
    \\"id\\": \\"humanitarian-finance\\",
    \\"indicators\\": Array [
      Object {
        \\"heading\\": \\"Humanitarian assistance refers to the financial resources for humanitarian action. It is delivered during and in the aftermath of man-made crises and disasters caused by natural hazards.\\",
        \\"id\\": \\"data_series.in_ha\\",
        \\"name\\": \\"Humanitarian assistance, US$\\",
        \\"source\\": \\"Development Initiatives based on OECD DAC,UN OCHA FTS and UN CERF.\\",
        \\"tooltip\\": \\"Humanitarian assistance to each country (including humanitarian assistance reported as ODA).\\",
      },
    ],
    \\"name\\": \\"Humanitarian finance\\",
    \\"position\\": 6,
  },
  Object {
    \\"default_indicator\\": \\"data_series.latest_census\\",
    \\"id\\": \\"data-revolution\\",
    \\"indicators\\": Array [
      Object {
        \\"heading\\": \\"The year of the last population census.\\",
        \\"id\\": \\"data_series.latest_census\\",
        \\"name\\": \\"Latest (planned) population census\\",
        \\"source\\": \\"UNDESA Population and Vital Statistics Report. Data as available at January 2014.\\",
        \\"tooltip\\": \\"The year of the last population census.\\",
      },
      Object {
        \\"heading\\": \\"The year and type of the last national household survey. Standard survey types: Demographic & Health Survey (DHS); Multiple Indicator Cluster Survey (MICS); Household Income & Expenditure Survey (HIES); National Survey (NS)\\",
        \\"id\\": \\"data_series.latest_hh_survey\\",
        \\"name\\": \\"Latest (planned) household survey\\",
        \\"source\\": \\"IHSN Survey Catalog; USAID DHS Program.\\",
        \\"tooltip\\": \\"The year and type of the last national household survey. Standard survey types: Demographic & Health Survey (DHS); Multiple Indicator Cluster Survey (MICS); Household Income & Expenditure Survey (HIES); National Survey (NS).\\",
      },
      Object {
        \\"heading\\": \\"Poverty surveys collect data on household income, consumption and expenditure, including income in kind. They typically include income, expenditure, and consumption surveys, household budget surveys, Integrated Surveys, Living Standard Measuring Surveys, and other poverty related surveys\\",
        \\"id\\": \\"data_series.number_of_surveys\\",
        \\"name\\": \\"Number of poverty surveys in past 10 years\\",
        \\"source\\": \\"World Bank Statistical Capacity Indicators (2014).\\",
        \\"tooltip\\": \\"Poverty surveys collect data on household income, consumption and expenditure, including income in kind. They typically include income, expenditure, and consumption surveys, household budget surveys, Integrated Surveys, Living Standard Measuring Surveys, and other poverty related surveys.\\",
      },
      Object {
        \\"heading\\": \\"The year of the last agricultural (crop and/or livestock) census or survey\\",
        \\"id\\": \\"data_series.agricultural_census\\",
        \\"name\\": \\"Latest (planned) agricultural census\\",
        \\"source\\": \\"FAO World Programme for the Census of Agriculture (WCA): www.fao.org/economic/ess/ess-wca/en/; World Bank World Development Indicators Metadata.\\",
        \\"tooltip\\": \\"The year of the last agricultural (crop and/or livestock) census or survey.\\",
      },
      Object {
        \\"heading\\": \\"The percentage of births reported in vital statistics where the data is derived from the Civil Registration system\\",
        \\"id\\": \\"data_series.civil_reg_births\\",
        \\"name\\": \\"Vital statistics from civil registration (births)\\",
        \\"source\\": \\"UNDESA Population and Vital Statistics Report. Data as available at Jan 2014; UNSD Coverage of Birth and Death Registration.\\",
        \\"tooltip\\": \\"The percentage of births reported in vital statistics where the data is derived from the Civil Registration system.\\",
      },
      Object {
        \\"heading\\": \\"The percentage of deaths reported in vital statistics where the data is derived from the Civil Registration system\\",
        \\"id\\": \\"data_series.civil_reg_deaths\\",
        \\"name\\": \\"Vital statistics from civil registration (deaths)\\",
        \\"source\\": \\"WHO African Health Observatory-Civil registration and vital statistics systems.\\",
        \\"tooltip\\": \\"The percentage of deaths reported in vital statistics where the data is derived from the Civil Registration system.\\",
      },
      Object {
        \\"heading\\": \\"A national administrative system recording data from all health facilities on staff, logistics, performance, morbidity etc\\",
        \\"id\\": \\"data_series.health_mis\\",
        \\"name\\": \\"Health management information system\\",
        \\"source\\": \\"Various, including system providers such as DHIS.\\",
        \\"tooltip\\": \\"A national administrative system recording data from all health facilities on staff, logistics, performance, morbidity etc.\\",
      },
      Object {
        \\"heading\\": \\"A national administrative system recording data from all education facilities on staff, logistics, performance etc\\",
        \\"id\\": \\"data_series.educ_mis\\",
        \\"name\\": \\"Education management information system\\",
        \\"source\\": \\"UNICEF Country Annual Reports: www.unicef.org/about/annualreport/index_82089.html; UIS Data Quality Assessment Framework (DQAF) output: www.poledakar.com/dqaf/index.php?title=DQAF_Events.\\",
        \\"tooltip\\": \\"A national administrative system recording data from all education facilities on staff, logistics, performance etc.\\",
      },
      Object {
        \\"heading\\": \\"The Statistical Capacity Indicator provides an overview of the capacity of a country's national statistical system based on a diagnostic framework thereby assessing three dimensions: methodology, source data, and periodicity and timeliness\\",
        \\"id\\": \\"data_series.stat_capacity\\",
        \\"name\\": \\"Statistical capacity\\",
        \\"source\\": \\"World Bank Statistical Capacity Indicators.\\",
        \\"tooltip\\": \\"The Statistical Capacity Indicator provides an overview of the capacity of a country's national statistical system based on a diagnostic framework thereby assessing three dimensions: methodology, source data, and periodicity and timeliness.\\",
      },
    ],
    \\"name\\": \\"Data revolution\\",
    \\"position\\": 7,
  },
  Object {
    \\"default_indicator\\": \\"data_series.iati_budgets_gb\\",
    \\"id\\": \\"forward-looking-oda\\",
    \\"indicators\\": Array [
      Object {
        \\"heading\\": \\"UK DFID forward-looking budgets for each country based on activities reported through IATI.\\",
        \\"id\\": \\"data_series.iati_budgets_gb\\",
        \\"name\\": \\"UK, DFID planned budgets, US$\\",
        \\"source\\": \\"Development Initaitives based on UK DFID data downloaded via the IATI Registry on 15 December 2016.\\",
        \\"tooltip\\": \\"The data shows forward looking budget data reported to the International Aid Transparency Initiative (IATI) by the UK for existing or committed projects spanning multiple years. Budget data is displayed for the Department for International Development only. This visualisation shows only project financing for specific countries: Regional and unspecified funding is excluded.\\",
      },
      Object {
        \\"heading\\": \\"Canada Global Affairs forward-looking budgets for each country based on activities reported through IATI.\\",
        \\"id\\": \\"data_series.iati_budgets_ca\\",
        \\"name\\": \\"Canada, Global Affairs planned budgets, US$\\",
        \\"source\\": \\"Development Initaitives based on Canada Global Affairs data downloaded via the IATI Registry on 15 December 2016.\\",
        \\"tooltip\\": \\"The data shows forward looking budget data reported to the International Aid Transparency Initiative (IATI) by Canada for existing or committed projects spanning multiple years. Budget data is displayed for Global Affairs Canada only. This visualisation shows only project financing for specific countries: Regional and unspecified funding is excluded.\\",
      },
      Object {
        \\"heading\\": \\"Denmark DANIDA and Foreign Affairs forward-looking budgets for each country based on activities reported through IATI.\\",
        \\"id\\": \\"data_series.iati_budgets_dk\\",
        \\"name\\": \\"Denmark, DANIDA and Foreign Affairs planned budgets, US$\\",
        \\"source\\": \\"Development Initaitives based on Denmark Ministry of Foreign Affairs data downloaded via the IATI Registry on 15 December 2016.\\",
        \\"tooltip\\": \\"The data shows forward looking budget data reported to the International Aid Transparency Initiative (IATI) by Denmark for existing or committed projects spanning multiple years. Budget data is displayed for DANIDA and the Ministry of Foreign Affairs. This visualisation shows only project financing for specific countries: Regional and unspecified funding is excluded.\\",
      },
      Object {
        \\"heading\\": \\"Netherlands Foreign Affairs forward-looking budgets for each country based on activities reported through IATI.\\",
        \\"id\\": \\"data_series.iati_budgets_nl\\",
        \\"name\\": \\"Netherlands, Foreign Affairs planned budgets, US$\\",
        \\"source\\": \\"Development Initaitives based on Netherlands Ministry of Foreign Affairs data downloaded via the IATI Registry on 15 December 2016.\\",
        \\"tooltip\\": \\"The data shows forward looking budget data reported to the International Aid Transparency Initiative (IATI) by the Netherlands for existing or committed projects spanning multiple years. Budget data is displayed for the Ministry of Foreign Affairs only. This visualisation shows only project financing for specific countries: Regional and unspecified funding is excluded.\\",
      },
      Object {
        \\"heading\\": \\"Belgian Development Cooperation forward-looking budgets for each country based on activities reported through IATI.\\",
        \\"id\\": \\"data_series.iati_budgets_be\\",
        \\"name\\": \\"Belgian Development Cooperation planned budgets, US$\\",
        \\"source\\": \\"Development Initaitives based on Belgian DG Development data downloaded via the IATI Registry on 15 December 2016.\\",
        \\"tooltip\\": \\"The data shows forward looking budget data reported to the International Aid Transparency Initiative (IATI) by Belgium for existing or committed projects spanning multiple years. Budget data is displayed for the Directorate-General for Development only. This visualisation shows only project financing for specific countries: Regional and unspecified funding is excluded.\\",
      },
    ],
    \\"name\\": \\"Forward looking ODA\\",
    \\"position\\": 8,
  },
]"
`;

exports[`Themes data tests should return spotlight on uganda themes 1`] = `
"Array [
  Object {
    \\"default_indicator\\": \\"data_series.poor_people_190\\",
    \\"id\\": \\"poverty\\",
    \\"indicators\\": Array [
      Object {
        \\"heading\\": \\"Extreme poverty is defined as living on less than $1.90 a day. It is calculated using the national poverty lines of some of the world's poorest countries at 2011 PPP$.\\",
        \\"id\\": \\"data_series.poor_people_190\\",
        \\"name\\": \\"Number of people living in extreme poverty\\",
        \\"source\\": \\"Development Initiatives based on World Bank PovcalNet\\",
        \\"tooltip\\": \\"Number of poor people living on under 2011 PPP$ 1.90 per day.\\",
      },
      Object {
        \\"heading\\": \\"Extreme poverty is defined as living on less than $1.90 a day. It is calculated using the national poverty lines of some of the world's poorest countries at 2011 PPP$.\\",
        \\"id\\": \\"data_series.poverty_190\\",
        \\"name\\": \\"% of population living in extreme poverty\\",
        \\"source\\": \\"Development Initiatives based on World Bank PovcalNet\\",
        \\"tooltip\\": \\"Percentage of population living under 2011 PPP$ 1.90 per day.\\",
      },
      Object {
        \\"heading\\": \\"From World Bank PovCalNet, representing the average gap for the whole population of each country, with those above the extreme poverty line counted as having a zero gap.\\",
        \\"id\\": \\"data_series.depth_of_extreme_poverty_190\\",
        \\"name\\": \\"Depth of extreme poverty (poverty gap)\\",
        \\"source\\": \\"Development Initiatives based on World Bank PovcalNet\\",
        \\"tooltip\\": \\"Depth of extreme poverty (also known as the poverty gap) tells us how far people are from the extreme poverty line, on average per country.\\",
      },
      Object {
        \\"heading\\": \\"Data for those living under $3.10 a day illustrates that while many people are not in extreme poverty (less than $1.90 a day) they are still very poor.\\",
        \\"id\\": \\"data_series.poverty_310\\",
        \\"name\\": \\"% of population living on less than $3.10 a day\\",
        \\"source\\": \\"Development Initiatives based on World Bank PovcalNet\\",
        \\"tooltip\\": \\"Percentage of population living under 2011 PPP$ 3.10 per day.\\",
      },
      Object {
        \\"heading\\": \\"The approximate number of people in each country who are in the global poorest 20%\\",
        \\"id\\": \\"data_series.2013_p20_population\\",
        \\"name\\": \\"Number of people in the P20\\",
        \\"source\\": \\"Development Initiatives based on PovcalNet as well as selected Demographic and health Surveys (DHS), Multiple Indicator Cluster Surveys (MICS), China Family Panel Studies (CFPS), and Brazil National Demographic and Healtj Surveys (PNDS)\\",
        \\"tooltip\\": \\"The approximate number of people in each country who are in the global poorest 20%\\",
      },
      Object {
        \\"heading\\": \\"The percentage of population of each country who are in the global poorest 20%\\",
        \\"id\\": \\"data_series.percent_in_p20_national\\",
        \\"name\\": \\"% of people in the P20\\",
        \\"source\\": \\"Development Initiatives based on PovcalNet as well as selected Demographic and health Surveys (DHS), Multiple Indicator Cluster Surveys (MICS), China Family Panel Studies (CFPS), and Brazil National Demographic and Healtj Surveys (PNDS)\\",
        \\"tooltip\\": \\"The percentage of population of each country who are in the global poorest 20%\\",
      },
      Object {
        \\"heading\\": \\"The percentage of people in each subnational area who are in the global poorest 20%\\",
        \\"id\\": \\"subnational_p20\\",
        \\"name\\": \\"% of people in the P20 (subnational level)\\",
        \\"source\\": \\"Development Initiatives based on PovcalNet as well as selected Demographic and health Surveys (DHS), Multiple Indicator Cluster Surveys (MICS), China Family Panel Studies (CFPS), and Brazil National Demographic and Healtj Surveys (PNDS)\\",
        \\"tooltip\\": \\"The percentage of people in each subnational area who are in the global poorest 20%\\",
      },
      Object {
        \\"heading\\": \\"The percentage of people in each household survey region who are in the global poorest 20%\\",
        \\"id\\": \\"survey_p20\\",
        \\"name\\": \\"% of people in the P20 (survey level)\\",
        \\"source\\": \\"Development Initiatives based on PovcalNet as well as selected Demographic and health Surveys (DHS), Multiple Indicator Cluster Surveys (MICS), China Family Panel Studies (CFPS), and Brazil National Demographic and Healtj Surveys (PNDS)\\",
        \\"tooltip\\": \\"The percentage of people in each household survey region who are in the global poorest 20%\\",
      },
    ],
    \\"name\\": \\"Poverty\\",
    \\"position\\": 1,
  },
  Object {
    \\"default_indicator\\": \\"data_series.fragile_states\\",
    \\"id\\": \\"vulnerability\\",
    \\"indicators\\": Array [
      Object {
        \\"heading\\": \\"The OECD Fragiliy Framework identifies countries are fragile or extremely fragile based on 50 indicators across five dimensions (economic, environmental, political, security and societal). It is part of the OECD report 'States of Fragility'.\\",
        \\"id\\": \\"data_series.fragile_states\\",
        \\"name\\": \\"Fragile states\\",
        \\"source\\": \\"Development Initiatives based on Fund for Peace Fragile States Index.\\",
        \\"tooltip\\": \\"Fragile states categories.\\",
      },
      Object {
        \\"heading\\": \\"Global adaptation index score of each country's vulnerability to climate change, incorporating exposure, sensitivity and ability to adapt to the negative impacts of climate. Source: Notre Dame Global Adaptation Index (ND-GAIN) vulnerability score.\\",
        \\"id\\": \\"data_series.climate_vulnerability\\",
        \\"name\\": \\"Climate vulnerability\\",
        \\"source\\": \\"Notre Dame Global Adaptation Index (ND-GAIN) vulnerability score.\\",
        \\"tooltip\\": \\"Global adaptation index score of each country's vulnerability to climate change, incorporating exposure, sensitivity and ability to adapt to the negative impacts of climate change. Higher scores indicate higher vulnerability to climate change.\\",
      },
      Object {
        \\"heading\\": \\"Countries that are at risk of conflict or have high current conflict intensity (Inform index component).\\",
        \\"id\\": \\"data_series.human_hazard\\",
        \\"name\\": \\"Human hazard and exposure score\\",
        \\"source\\": \\"Inform (Index for Risk Management) v 3.0.5.\\",
        \\"tooltip\\": \\"Index for risk management score for exposure to human hazards (10 = high exposure).\\",
      },
      Object {
        \\"heading\\": \\"Countries that are exposed to, or are vulnerable to natural hazards (INFORM index component).\\",
        \\"id\\": \\"data_series.natural_hazard\\",
        \\"name\\": \\"Natural hazard and exposure score\\",
        \\"source\\": \\"Inform (Index for Risk Management) v 3.0.5.\\",
        \\"tooltip\\": \\"Index for risk management score for exposure to natural hazards (10 = high exposure).\\",
      },
      Object {
        \\"heading\\": \\"Number of UN-coordinated appeals per country since 2000\\",
        \\"id\\": \\"data_series.number_of_un_appeals\\",
        \\"name\\": \\"Number of UN-coordinated appeals\\",
        \\"source\\": \\"Development Initiatives based on UN OCHA's FTS.\\",
        \\"tooltip\\": \\"Number of UN-coordinated appeals per country since 2000.\\",
      },
      Object {
        \\"heading\\": \\"EC's department of Humanitarian Aid and Civil Protection (ECHO) identifies forgotten or so-called 'neglected' emergencies. It has been assembling data for its index since 2004. The map shows countries' number of appearances on the index since then.\\",
        \\"id\\": \\"data_series.forgotten_crisis\\",
        \\"name\\": \\"Number of appearances on ECHO's Forgotten Crisis Assessment index\\",
        \\"source\\": \\"Development Initiatives based on ECHO Forgotten Crisis Assessment Index.\\",
        \\"tooltip\\": \\"EC's department of Humanitarian Aid and Civil Protection (ECHO) identifies forgotten or so-called 'neglected' emergencies. It has been assembling data for its index since 2004.\\",
      },
      Object {
        \\"heading\\": \\"Number of people displaced due to human hazards refers to refugees and people in refugee-like situations, internally displaced persons and asylum seekers\\",
        \\"id\\": \\"data_series.displacement\\",
        \\"name\\": \\"Number of people displaced due to human hazards by hosting country\\",
        \\"source\\": \\"Development Initiatives based on UN High Commissioner for Refugees (UNHCR) and UN Relief and Works Agency for Palestine Refugees in the Near East.\\",
        \\"tooltip\\": \\"Number of people displaced due to human hazards refers to refugees and people in refugee-like situations, internally displaced persons and asylum seekers.\\",
      },
    ],
    \\"name\\": \\"Vulnerability\\",
    \\"position\\": 2,
  },
  Object {
    \\"default_indicator\\": \\"data_series.non_grant_revenue_ppp_pc\\",
    \\"id\\": \\"government-finance\\",
    \\"indicators\\": Array [
      Object {
        \\"heading\\": \\"Average revenue raised per person by the government, including tax and non-tax revenue (grants and borrowing are excluded). Figures are displayed in 2015 constant purchasing power parity (PPP)$. (Data series is from 1999-2021, where available. The hover function details whether the data point is an actual or a projected figure.)\\",
        \\"id\\": \\"data_series.non_grant_revenue_ppp_pc\\",
        \\"name\\": \\"Government revenue per person (excluding grants), 2015 PPP$\\",
        \\"source\\": \\"Development Initiatives based on IMF Article IV publications and World Economic Outlook.\\",
        \\"tooltip\\": \\"Government revenue per person (excluding grants), 2015 PPP$.\\",
      },
      Object {
        \\"heading\\": \\"Average revenue raised per person by the government, including tax, non-tax revenue and grants (borrowing is excluded). Figures are displayed in 2015 constant purchasing power parity (PPP)$. (Data series is from 1999-2021, where available. The hover function details whether the data point is an actual or a projected figure.)\\",
        \\"id\\": \\"data_series.total_revenue_ppp_pc\\",
        \\"name\\": \\"Government revenue per person (including grants), 2015 PPP$\\",
        \\"source\\": \\"Development Initiatives based on IMF Article IV publications and World Economic Outlook.\\",
        \\"tooltip\\": \\"Government revenue per person (including grants), 2015 PPP$.\\",
      },
      Object {
        \\"heading\\": \\"Revenue raised as a proportion of national income (GDP) by the government, including tax and non-tax revenue (grants and borrowing are excluded). (Data series is from 1999-2021, where available. The hover function details whether the data point is an actual or a projected figure.)\\",
        \\"id\\": \\"data_series.govt_revenue_pc_gdp\\",
        \\"name\\": \\"Government revenue (excluding grants), % of GDP\\",
        \\"source\\": \\"Development Initiatives based on IMF Article IV publications and World Economic Outlook.\\",
        \\"tooltip\\": \\"Government revenue (excluding grants), % of GDP\\",
      },
      Object {
        \\"heading\\": \\"Revenue raised as a proportion of national income (GDP) by the government, including tax, non-tax revenue and grants (borrowing is excluded). (Data series is from 1999-2021, where available. The hover function details whether the data point is an actual or a projected figure.)\\",
        \\"id\\": \\"data_series.total_revenue_percent_gdp\\",
        \\"name\\": \\"Government revenue (including grants), % of GDP\\",
        \\"source\\": \\"Development Initiatives based on IMF Article IV publications.\\",
        \\"tooltip\\": \\"Government revenue (including grants), % of GDP.\\",
      },
      Object {
        \\"heading\\": \\"Grants from international donors as a proportion of government revenue (including grants). (Data series is from 1999-2021, where available. The hover function details whether the data point is an actual or a projected figure.)\\",
        \\"id\\": \\"data_series.grants_percent_total_revenue\\",
        \\"name\\": \\"Grants, % of government revenue\\",
        \\"source\\": \\"Development Initiatives based on IMF Article IV publications and World Economic Outlook.\\",
        \\"tooltip\\": \\"Grants, % of government revenue.\\",
      },
      Object {
        \\"heading\\": \\"Total expenditure by the government divided by the total population. Figures are displayed in 2015 constant purchasing power parity (PPP)$. (Data series is from 1999-2021, where available. The hover function details whether the data point is an actual or a projected figure.)\\",
        \\"id\\": \\"data_series.govt_spend_pc\\",
        \\"name\\": \\"Government spending per person, 2015 PPP$\\",
        \\"source\\": \\"Development Initiatives based on IMF Article IV publications and World Economic Outlook.\\",
        \\"tooltip\\": \\"Government spending per person, 2015 PPP$. Data is for 2015 or most recent year prior.\\",
      },
    ],
    \\"name\\": \\"Government finance\\",
    \\"position\\": 3,
  },
  Object {
    \\"default_indicator\\": \\"data_series.largest_intl_flow\\",
    \\"id\\": \\"international-finance\\",
    \\"indicators\\": Array [
      Object {
        \\"heading\\": \\"Largest source of international financing to each developing country\\",
        \\"id\\": \\"data_series.largest_intl_flow\\",
        \\"name\\": \\"Largest international resource flow\\",
        \\"source\\": \\"Development Initiatives based on numerous sources (see notes for international resource flows to and from developing countries data).\\",
        \\"tooltip\\": \\"The largest international resource flow to each country in each year.\\",
      },
      Object {
        \\"heading\\": \\"The sum of official, commercial and private resource flows received by each developing country, expressed as a percentage of GDP.\\",
        \\"id\\": \\"data_series.intl_resources_total_percent_gdp\\",
        \\"name\\": \\"Total international resource flows, % of GDP\\",
        \\"source\\": \\"Development Initiatives based on numerous sources (see notes for international resource flows to and from developing countries data).\\",
        \\"tooltip\\": \\"Total international resource flows received by each country divided by the country's GDP, for each year.\\",
      },
      Object {
        \\"heading\\": \\"ODA received by each developing country, expressed as a percentage of all official, commercial and private international resource inflows.\\",
        \\"id\\": \\"data_series.oda_percent_intl_resources\\",
        \\"name\\": \\"ODA, % of international resource flows\\",
        \\"source\\": \\"Development Initiatives based on numerous sources (see notes for international resource flows to and from developing countries data).\\",
        \\"tooltip\\": \\"Inflows of gross official development assistance (ODA) to each country expressed as a percentage of total international resource flows received by the same country, each year.\\",
      },
      Object {
        \\"heading\\": \\"Inflows of foreign direct investment expressed as a percentage of the country's GDP.\\",
        \\"id\\": \\"data_series.fdi_percent_gdp\\",
        \\"name\\": \\"Foreign direct investment, % of GDP\\",
        \\"source\\": \\"Development Initiatives based on UNCTAD Stat and World Bank Development Indicators.\\",
        \\"tooltip\\": \\"Inflows of foreign direct investment to each country expressed as a percentage of GDP of the same country, each year.\\",
      },
      Object {
        \\"heading\\": \\"Volume of financing received from foreign direct investors divided by the country's population (includes equity, loans and reinvested profits). Data is in constant 2015 prices.\\",
        \\"id\\": \\"data_series.fdi_pp\\",
        \\"name\\": \\"Foreign direct investment per person, US$\\",
        \\"source\\": \\"Development Initiatives based on UNCTAD Stat and World Bank Development Indicators.\\",
        \\"tooltip\\": \\"Foreign direct investment per person (note that negative values, which occur when disinvestment exceeds new investments, are excluded).\\",
      },
      Object {
        \\"heading\\": \\"Volume of remittances received in each country divided by the country's population (includes personal transfers and income of workers employed in an economy where they are not resident). Data is in constant 2015 prices.\\",
        \\"id\\": \\"data_series.remittances_pp\\",
        \\"name\\": \\"Remittances received per person, US$\\",
        \\"source\\": \\"Development Initiatives based on World Bank.\\",
        \\"tooltip\\": \\"Remittances per person.\\",
      },
    ],
    \\"name\\": \\"International finance\\",
    \\"position\\": 4,
  },
  Object {
    \\"default_indicator\\": \\"fact.in_oda_gross_2015\\",
    \\"id\\": \\"international-official-finance\\",
    \\"indicators\\": Array [
      Object {
        \\"heading\\": \\"Gross official development assistance (ODA) includes monetary transfers (e.g. grants and loans to governments and for project-type interventions), non-monetary transfers (e.g. food aid, technical cooperation) and ODA that resulted in no additional transfer of resources (e.g. debt relief). Data is in constant 2015 prices\\",
        \\"id\\": \\"fact.in_oda_gross_2015\\",
        \\"name\\": \\"Gross ODA received, US$\\",
        \\"source\\": \\"OECD DAC 2A.\\",
        \\"tooltip\\": \\"Gross ODA received, US$.\\",
      },
      Object {
        \\"heading\\": \\"Net official development assistance (ODA) includes monetary transfers, non-monetary transfers (e.g. food aid, technical cooperation) and ODA that resulted in no additional transfer of resources (e.g. debt relief) minus capital repayments on ODA loans (interest repayments are not subtracted). Data is in constant 2015 prices.\\",
        \\"id\\": \\"fact.in_oda_net_2015\\",
        \\"name\\": \\"Net ODA received, US$\\",
        \\"source\\": \\"OECD DAC 2B.\\",
        \\"tooltip\\": \\"Net ODA received, US$.\\",
      },
      Object {
        \\"heading\\": \\"Net official development assistance (ODA) provided by each member of the OECD Development Assistance Committee (DAC). Includes monetary transfers, non-monetary transfers (e.g. food aid, technical cooperation) and ODA that resulted in no additional transfer of resources (e.g. debt relief) minus capital repayments on ODA loans (interest repayments are not subtracted). Data is in constant 2015 prices.\\",
        \\"id\\": \\"fact.out_oda_net_2015\\",
        \\"name\\": \\"Net ODA provided by OECD DAC members, US$\\",
        \\"source\\": \\"OECD DAC 2A.\\",
        \\"tooltip\\": \\"Net ODA provided by OECD DAC members, US$.\\",
      },
      Object {
        \\"heading\\": \\"Official development assistance (ODA) per poor person, calculated as the total net ODA received by a country divided by the number of people in that country living on less than $1.90 per day. Data is in constant 2015 prices.\\",
        \\"id\\": \\"recipient_profile.oda_per_poor_person_2015\\",
        \\"name\\": \\"ODA per person living on under $1.90 a day, US$\\",
        \\"source\\": \\"ODA shown is provided by DAC donors and multilateral organisations reporting to the OECD DAC; recipients shown include those on the historical and current DAC lists of ODA recipients.\\",
        \\"tooltip\\": \\"ODA per person living on under $1.90 a day, US$.\\",
      },
      Object {
        \\"heading\\": \\"Net official development assistance (ODA) provided by members of the OECD Development Assistance Committee (DAC), expressed as a percentage of gross national income (GNI).\\",
        \\"id\\": \\"fact.oda_percent_gni\\",
        \\"name\\": \\"Net ODA provided by DAC members, % of GNI\\",
        \\"source\\": \\"OECD DAC 1.\\",
        \\"tooltip\\": \\"Net ODA provided by DAC members, % of GNI.\\",
      },
      Object {
        \\"heading\\": \\"Net official development assistance (ODA) to least-developed countries (LDCs) provided by members of the OECD Development Assistance Committee (DAC), expressed as a percentage of gross national income.\\",
        \\"id\\": \\"fact.oda_to_ldcs_percent_gni\\",
        \\"name\\": \\"Net ODA provided by DAC members to LDCs, % of GNI\\",
        \\"source\\": \\"OECD DAC 1, OECD DAC 2A.\\",
        \\"tooltip\\": \\"Net ODA provided by DAC members to LDCs, % of GNI.\\",
      },
      Object {
        \\"heading\\": \\"Other official flows (OOFs) are flows to developing countries that do not meet the criteria to count as ODA. These are typically loans at low levels of concessionality. Officially supported export credits are finance that is primarily aimed at facilitating exports from the donor country. Data is in constant 2015 prices.\\",
        \\"id\\": \\"fact.in_oof_gross_2015\\",
        \\"name\\": \\"Gross long-term other official flows and export credits received, US$\\",
        \\"source\\": \\"OECD DAC 2B.\\",
        \\"tooltip\\": \\"Gross long-term other official flows and export credits received, US$\\",
      },
      Object {
        \\"heading\\": \\"Other official flows (OOFs) are flows to developing countries that do not meet the criteria to count as ODA. These are typically loans at low levels of concessionality. Officially supported export credits are finance that is primarily aimed at facilitating exports from the donor country. Data is in constant 2015 prices.\\",
        \\"id\\": \\"fact.out_oof_net\\",
        \\"name\\": \\"Net other official flows and export credits provided, US$\\",
        \\"source\\": \\"OECD DAC 2B.\\",
        \\"tooltip\\": \\"Net other official flows and export credits provided, US$.\\",
      },
      Object {
        \\"heading\\": \\"Net ODA provided by countries beyond the OECD Development Assistance Committee (DAC) who do report to the OECD. Data is in constant 2015 prices.\\",
        \\"id\\": \\"fact.out_ssc_net_2015\\",
        \\"name\\": \\"Net ODA provided by non-DAC donors, US$\\",
        \\"source\\": \\"OECD DAC 2A\\",
        \\"tooltip\\": \\"Net ODA provided by non-DAC donors, US$\\",
      },
      Object {
        \\"heading\\": \\"Net ODA provided by countries beyond the OECD Development Assistance Committee (DAC) who do report to the OECD, expressed as a percentage of gross national income\\",
        \\"id\\": \\"fact.ssc_percent_gni\\",
        \\"name\\": \\"Net ODA provided by non-DAC donors, % of GNI\\",
        \\"source\\": \\"OECD DAC1.\\",
        \\"tooltip\\": \\"Net ODA provided by non-DAC donors, % of GNI.\\",
      },
    ],
    \\"name\\": \\"International official finance\\",
    \\"position\\": 5,
  },
  Object {
    \\"default_indicator\\": \\"data_series.in_ha\\",
    \\"id\\": \\"humanitarian-finance\\",
    \\"indicators\\": Array [
      Object {
        \\"heading\\": \\"Humanitarian assistance refers to the financial resources for humanitarian action. It is delivered during and in the aftermath of man-made crises and disasters caused by natural hazards.\\",
        \\"id\\": \\"data_series.in_ha\\",
        \\"name\\": \\"Humanitarian assistance, US$\\",
        \\"source\\": \\"Development Initiatives based on OECD DAC,UN OCHA FTS and UN CERF.\\",
        \\"tooltip\\": \\"Humanitarian assistance to each country (including humanitarian assistance reported as ODA).\\",
      },
    ],
    \\"name\\": \\"Humanitarian finance\\",
    \\"position\\": 6,
  },
  Object {
    \\"default_indicator\\": \\"data_series.latest_census\\",
    \\"id\\": \\"data-revolution\\",
    \\"indicators\\": Array [
      Object {
        \\"heading\\": \\"The year of the last population census.\\",
        \\"id\\": \\"data_series.latest_census\\",
        \\"name\\": \\"Latest (planned) population census\\",
        \\"source\\": \\"UNDESA Population and Vital Statistics Report. Data as available at January 2014.\\",
        \\"tooltip\\": \\"The year of the last population census.\\",
      },
      Object {
        \\"heading\\": \\"The year and type of the last national household survey. Standard survey types: Demographic & Health Survey (DHS); Multiple Indicator Cluster Survey (MICS); Household Income & Expenditure Survey (HIES); National Survey (NS)\\",
        \\"id\\": \\"data_series.latest_hh_survey\\",
        \\"name\\": \\"Latest (planned) household survey\\",
        \\"source\\": \\"IHSN Survey Catalog; USAID DHS Program.\\",
        \\"tooltip\\": \\"The year and type of the last national household survey. Standard survey types: Demographic & Health Survey (DHS); Multiple Indicator Cluster Survey (MICS); Household Income & Expenditure Survey (HIES); National Survey (NS).\\",
      },
      Object {
        \\"heading\\": \\"Poverty surveys collect data on household income, consumption and expenditure, including income in kind. They typically include income, expenditure, and consumption surveys, household budget surveys, Integrated Surveys, Living Standard Measuring Surveys, and other poverty related surveys\\",
        \\"id\\": \\"data_series.number_of_surveys\\",
        \\"name\\": \\"Number of poverty surveys in past 10 years\\",
        \\"source\\": \\"World Bank Statistical Capacity Indicators (2014).\\",
        \\"tooltip\\": \\"Poverty surveys collect data on household income, consumption and expenditure, including income in kind. They typically include income, expenditure, and consumption surveys, household budget surveys, Integrated Surveys, Living Standard Measuring Surveys, and other poverty related surveys.\\",
      },
      Object {
        \\"heading\\": \\"The year of the last agricultural (crop and/or livestock) census or survey\\",
        \\"id\\": \\"data_series.agricultural_census\\",
        \\"name\\": \\"Latest (planned) agricultural census\\",
        \\"source\\": \\"FAO World Programme for the Census of Agriculture (WCA): www.fao.org/economic/ess/ess-wca/en/; World Bank World Development Indicators Metadata.\\",
        \\"tooltip\\": \\"The year of the last agricultural (crop and/or livestock) census or survey.\\",
      },
      Object {
        \\"heading\\": \\"The percentage of births reported in vital statistics where the data is derived from the Civil Registration system\\",
        \\"id\\": \\"data_series.civil_reg_births\\",
        \\"name\\": \\"Vital statistics from civil registration (births)\\",
        \\"source\\": \\"UNDESA Population and Vital Statistics Report. Data as available at Jan 2014; UNSD Coverage of Birth and Death Registration.\\",
        \\"tooltip\\": \\"The percentage of births reported in vital statistics where the data is derived from the Civil Registration system.\\",
      },
      Object {
        \\"heading\\": \\"The percentage of deaths reported in vital statistics where the data is derived from the Civil Registration system\\",
        \\"id\\": \\"data_series.civil_reg_deaths\\",
        \\"name\\": \\"Vital statistics from civil registration (deaths)\\",
        \\"source\\": \\"WHO African Health Observatory-Civil registration and vital statistics systems.\\",
        \\"tooltip\\": \\"The percentage of deaths reported in vital statistics where the data is derived from the Civil Registration system.\\",
      },
      Object {
        \\"heading\\": \\"A national administrative system recording data from all health facilities on staff, logistics, performance, morbidity etc\\",
        \\"id\\": \\"data_series.health_mis\\",
        \\"name\\": \\"Health management information system\\",
        \\"source\\": \\"Various, including system providers such as DHIS.\\",
        \\"tooltip\\": \\"A national administrative system recording data from all health facilities on staff, logistics, performance, morbidity etc.\\",
      },
      Object {
        \\"heading\\": \\"A national administrative system recording data from all education facilities on staff, logistics, performance etc\\",
        \\"id\\": \\"data_series.educ_mis\\",
        \\"name\\": \\"Education management information system\\",
        \\"source\\": \\"UNICEF Country Annual Reports: www.unicef.org/about/annualreport/index_82089.html; UIS Data Quality Assessment Framework (DQAF) output: www.poledakar.com/dqaf/index.php?title=DQAF_Events.\\",
        \\"tooltip\\": \\"A national administrative system recording data from all education facilities on staff, logistics, performance etc.\\",
      },
      Object {
        \\"heading\\": \\"The Statistical Capacity Indicator provides an overview of the capacity of a country's national statistical system based on a diagnostic framework thereby assessing three dimensions: methodology, source data, and periodicity and timeliness\\",
        \\"id\\": \\"data_series.stat_capacity\\",
        \\"name\\": \\"Statistical capacity\\",
        \\"source\\": \\"World Bank Statistical Capacity Indicators.\\",
        \\"tooltip\\": \\"The Statistical Capacity Indicator provides an overview of the capacity of a country's national statistical system based on a diagnostic framework thereby assessing three dimensions: methodology, source data, and periodicity and timeliness.\\",
      },
    ],
    \\"name\\": \\"Data revolution\\",
    \\"position\\": 7,
  },
  Object {
    \\"default_indicator\\": \\"data_series.iati_budgets_gb\\",
    \\"id\\": \\"forward-looking-oda\\",
    \\"indicators\\": Array [
      Object {
        \\"heading\\": \\"UK DFID forward-looking budgets for each country based on activities reported through IATI.\\",
        \\"id\\": \\"data_series.iati_budgets_gb\\",
        \\"name\\": \\"UK, DFID planned budgets, US$\\",
        \\"source\\": \\"Development Initaitives based on UK DFID data downloaded via the IATI Registry on 15 December 2016.\\",
        \\"tooltip\\": \\"The data shows forward looking budget data reported to the International Aid Transparency Initiative (IATI) by the UK for existing or committed projects spanning multiple years. Budget data is displayed for the Department for International Development only. This visualisation shows only project financing for specific countries: Regional and unspecified funding is excluded.\\",
      },
      Object {
        \\"heading\\": \\"Canada Global Affairs forward-looking budgets for each country based on activities reported through IATI.\\",
        \\"id\\": \\"data_series.iati_budgets_ca\\",
        \\"name\\": \\"Canada, Global Affairs planned budgets, US$\\",
        \\"source\\": \\"Development Initaitives based on Canada Global Affairs data downloaded via the IATI Registry on 15 December 2016.\\",
        \\"tooltip\\": \\"The data shows forward looking budget data reported to the International Aid Transparency Initiative (IATI) by Canada for existing or committed projects spanning multiple years. Budget data is displayed for Global Affairs Canada only. This visualisation shows only project financing for specific countries: Regional and unspecified funding is excluded.\\",
      },
      Object {
        \\"heading\\": \\"Denmark DANIDA and Foreign Affairs forward-looking budgets for each country based on activities reported through IATI.\\",
        \\"id\\": \\"data_series.iati_budgets_dk\\",
        \\"name\\": \\"Denmark, DANIDA and Foreign Affairs planned budgets, US$\\",
        \\"source\\": \\"Development Initaitives based on Denmark Ministry of Foreign Affairs data downloaded via the IATI Registry on 15 December 2016.\\",
        \\"tooltip\\": \\"The data shows forward looking budget data reported to the International Aid Transparency Initiative (IATI) by Denmark for existing or committed projects spanning multiple years. Budget data is displayed for DANIDA and the Ministry of Foreign Affairs. This visualisation shows only project financing for specific countries: Regional and unspecified funding is excluded.\\",
      },
      Object {
        \\"heading\\": \\"Netherlands Foreign Affairs forward-looking budgets for each country based on activities reported through IATI.\\",
        \\"id\\": \\"data_series.iati_budgets_nl\\",
        \\"name\\": \\"Netherlands, Foreign Affairs planned budgets, US$\\",
        \\"source\\": \\"Development Initaitives based on Netherlands Ministry of Foreign Affairs data downloaded via the IATI Registry on 15 December 2016.\\",
        \\"tooltip\\": \\"The data shows forward looking budget data reported to the International Aid Transparency Initiative (IATI) by the Netherlands for existing or committed projects spanning multiple years. Budget data is displayed for the Ministry of Foreign Affairs only. This visualisation shows only project financing for specific countries: Regional and unspecified funding is excluded.\\",
      },
      Object {
        \\"heading\\": \\"Belgian Development Cooperation forward-looking budgets for each country based on activities reported through IATI.\\",
        \\"id\\": \\"data_series.iati_budgets_be\\",
        \\"name\\": \\"Belgian Development Cooperation planned budgets, US$\\",
        \\"source\\": \\"Development Initaitives based on Belgian DG Development data downloaded via the IATI Registry on 15 December 2016.\\",
        \\"tooltip\\": \\"The data shows forward looking budget data reported to the International Aid Transparency Initiative (IATI) by Belgium for existing or committed projects spanning multiple years. Budget data is displayed for the Directorate-General for Development only. This visualisation shows only project financing for specific countries: Regional and unspecified funding is excluded.\\",
      },
    ],
    \\"name\\": \\"Forward looking ODA\\",
    \\"position\\": 8,
  },
]"
`;
